# kaelprotocol

./: .env.closed-testnet.example  .env.private-testnet.example  .gitignore  Cargo.toml  README.md
contracts/src/: HashedTimelock.sol  Order.sol  Settlement.sol
contracts/test/: HashedTimelock.t.sol  MainnetReadinessFuzz.t.sol  MockERC20.sol  Order.t.sol  Settlement.t.sol  Vector.t.sol
docs/: ARCHITECTURE.md  AUDITOR_HANDOFF_INDEX.md  AUDIT_INTERNAL_REVIEW.md  AUDIT_PACKAGE.md  CLOSED_TESTNET_RUNBOOK.md  DECISIONS.md  DESIGN_CHAIN_FINALITY.md  DEV_TEST_RUNBOOK.md  ESTADO.md  FINDINGS_REGISTER.md  IMPLEMENTATION_PLAN_FINALITY.md  IMPLEMENTATION_PLAN_FROM_AUDIT.md  INCIDENT_RESPONSE.md  INTERNAL_AUDIT_REPORT.md  KAEL_CHECKLIST.md  KNOWN_LIMITATIONS.md  MAINNET_READINESS_GAP.md  MAINNET_READINESS_GATE.md  MAINNET_RUNBOOK_DRAFT.md  PRE_AUDIT_SNAPSHOT.md  PRIVATE_TESTNET_RUNBOOK.md  RISK_REGISTER.md  SECURITY_INVARIANTS.md  SESSION_WORK_REPORT.md  TEST_MATRIX.md  THIRTY_NODE_MARKET_TESTNET_SIMULATION.md  THREAT_MODEL.md  TRUST_ASSUMPTIONS.md
maestro/: Cargo.toml
maestro/src/: correlate.rs  hashlock.rs  lib.rs  watcher.rs
maestro/tests/: e2e.rs  full_flow.rs
orderbook/: Cargo.toml
orderbook/src/: book.rs  eip712.rs  lib.rs  matching.rs  order.rs  server.rs  wire.rs
orderbook/tests/: server_integration.rs
scripts/: run_30node_market_testnet_simulation.sh  run_closed_testnet_local.sh  run_closed_testnet_preflight.sh  run_closed_testnet_swap.sh  run_dev_swap_test.sh  run_mainnet_readiness_gate.sh  run_private_testnet_full.sh
swapkit/: Cargo.toml
swapkit/src/: chain.rs  handshake.rs  lib.rs  sm.rs  verify.rs
swapkit/src/exec/: confirm.rs  mod.rs  observe.rs  signer.rs  tx.rs
swapkit/tests/: mainnet_readiness_properties.rs  market_testnet_simulation.rs  preflight_no_transactions.rs
vectors/: eip712_order.json
