[package]
name = "maestro"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "maestro"
path = "src/lib.rs"

[[bin]]
name = "maestro"
path = "src/bin/maestro.rs"

[dependencies]
# Correlação por hashlock usa SHA-256 (alinhado ao contrato — fonte única).
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
# Conversa com chains EVM.
alloy = { version = "1.0", features = [
    "providers",
    "provider-ws",
    "rpc-types-eth",
    "sol-types",
    "contract",
    "node-bindings",
    "signer-local",
    "network",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "io-util", "net"] }
# Capstone (Parte 6): demonstra livro + liquidação + maestro juntos.
orderbook = { path = "../orderbook" }
serde_json = "1"
