[package]
name = "orderbook"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "orderbook"
path = "src/lib.rs"

[[bin]]
name = "orderbook-server"
path = "src/bin/server.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# EIP-712 verification (Part 5)
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
hex = "0.4"
# Servidor (Parte 5)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "io-util"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
