[package]
name = "swapkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "swapkit"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# A carteira entende o formato de ordem assinada e o digest EIP-712 — FONTE ÚNICA
# (não reimplementa o digest, reusa o do orderbook == Order.sol).
orderbook = { path = "../orderbook" }
# Leitura de chain EVM (RpcVerifier). Mesma lib do maestro.
alloy = { version = "1.0", features = [
    "providers",
    "contract",
    "sol-types",
    "rpc-types-eth",
    "network",
    "reqwest",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Prova de integração REAL contra anvil: sobe nó, faz deploy do HTLC e cria uma
# trava de verdade, lida via RpcVerifier. Reusa o binding do HTLC (sol!) e o
# hashlock do maestro para não duplicar artefato/regra.
maestro = { path = "../maestro" }
alloy = { version = "1.0", features = ["node-bindings", "signer-local"] }
