[package]
name = "swapkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "swapkit"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# A carteira entende o formato de ordem assinada e o digest EIP-712 — FONTE ÚNICA
# (não reimplementa o digest, reusa o do orderbook == Order.sol).
orderbook = { path = "../orderbook" }
# Leitura de chain EVM (RpcVerifier). Mesma lib do maestro.
alloy = { version = "1.0", features = [
    "providers",
    "contract",
    "sol-types",
    "rpc-types-eth",
    "network",
    "reqwest",
    # Assinatura local (secp256k1) — o executor assina tx de lock/redeem/refund.
    # Era só dev-dependency (testes anvil); o executor é código de produção.
    "signer-local",
] }
# DESCOBERTA da perna oposta por hashlock (F3): o executor REUSA o SwapTracker e o
# watcher do maestro tal-e-qual (correlação por hashlock + extração do preimage),
# em vez de reimplementar. Promovido de dev-dependency para dependency normal —
# confirmado SEM ciclo (maestro não depende do swapkit).
maestro = { path = "../maestro" }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["time", "sync"] }
alloy = { version = "1.0", features = ["node-bindings", "signer-local"] }
# Viagem no tempo do anvil (evm_increaseTime/evm_mine via raw_request) para provar
# o refund real APÓS expiração do timelock — o caminho de SEGURANÇA do protocolo.
serde_json = "1"
