[package]
name = "swapkit"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "swapkit"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# The wallet understands the signed-order format and EIP-712 digest through the
# single source in orderbook, matching Order.sol.
orderbook = { path = "../orderbook" }
# EVM chain reads (RpcVerifier). Same library family used by maestro.
alloy = { version = "1.0", features = [
    "providers",
    "contract",
    "sol-types",
    "rpc-types-eth",
    "network",
    "reqwest",
    # Local secp256k1 signing for executor lock/redeem/refund transactions.
    # This used to be test-only for anvil tests; the executor is production code.
    "signer-local",
] }
# Counterparty-leg discovery by hashlock: the executor reuses maestro's
# SwapTracker and watcher for hashlock correlation and preimage extraction
# instead of reimplementing them. This is a normal dependency with no cycle.
maestro = { path = "../maestro" }
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["time", "sync"] }
alloy = { version = "1.0", features = ["node-bindings", "signer-local"] }
# Anvil time travel for proving real refund after timelock expiry.
serde_json = "1"
